# sanipass

./: README.md  pyproject.toml
sanipass/: __main__.py  logger.py
sanipass/app/image/engines/: opencv.py  pil.py
sanipass/app/image/models/: ocr_entry.py  sanipass_image.py
sanipass/app/models/: image.py
sanipass/app/ocr/: ocr_processor.py
sanipass/app/ocr/engines/: tesseract.py
tests/: test_template.py
